--- a/css/custom.css
+++ b/css/custom.css
@@ -74,7 +74,7 @@
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-  --bs-body-font-family: var(--bs-font-sans-serif);
+  --bs-body-font-family: "Raleway", serif;
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
@@ -3866,8 +3866,8 @@ textarea.form-control-lg {
 .navbar {
   --bs-navbar-padding-x: 0;
   --bs-navbar-padding-y: 0.5rem;
-  --bs-navbar-color: rgba(var(--bs-emphasis-color-rgb), 0.65);
-  --bs-navbar-hover-color: rgba(var(--bs-emphasis-color-rgb), 0.8);
+  --bs-navbar-color: #333138;
+  --bs-navbar-hover-color: black;
   --bs-navbar-disabled-color: rgba(var(--bs-emphasis-color-rgb), 0.3);
   --bs-navbar-active-color: rgba(var(--bs-emphasis-color-rgb), 1);
   --bs-navbar-brand-padding-y: 0.3125rem;
@@ -5685,7 +5685,7 @@ textarea.form-control-lg {
   z-index: var(--bs-tooltip-zindex);
   display: block;
   margin: var(--bs-tooltip-margin);
-  font-family: var(--bs-font-sans-serif);
+  font-family: "Raleway", serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -5795,7 +5795,7 @@ textarea.form-control-lg {
   z-index: var(--bs-popover-zindex);
   display: block;
   max-width: var(--bs-popover-max-width);
-  font-family: var(--bs-font-sans-serif);
+  font-family: "Raleway", serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -11861,6 +11861,24 @@ textarea.form-control-lg {
   top: 50%;
   transform: translate(-50%, -50%);
   font-size: 1.1rem;
+}
+
+.cc-footer a {
+  text-decoration: none;
+  color: #333138;
+}
+
+.cc-footer a:hover {
+  text-decoration: underline;
+  color: #0465E1;
+}
+
+.cc-footer h5, .cc-footer .h5 {
+  color: #0465E1;
+}
+
+.cc-footer-copyright {
+  border-top: 0.15rem solid #0465E1;
 }
 
 /*# sourceMappingURL=custom.css.map */
