--- a/css/custom.css
+++ b/css/custom.css
@@ -11875,10 +11875,62 @@ textarea.form-control-lg {
 
 .cc-footer h5, .cc-footer .h5 {
   color: #0465E1;
+  margin-top: 8rem;
 }
 
 .cc-footer-copyright {
   border-top: 0.15rem solid #0465E1;
+}
+
+.hero-banner {
+  background-image: url(../images/hero-banner-lg.png);
+  background-position: center;
+  height: 500px;
+  position: relative;
+  z-index: -1;
+}
+
+.hero-text {
+  position: absolute;
+  top: 35%;
+  left: 16vw;
+  width: 35rem;
+  color: white;
+}
+
+.hero-text h1, .hero-text .h1 {
+  font-weight: 800;
+}
+
+.underline {
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-decoration-skip-ink: auto;
+  text-decoration-color: #0465E1;
+  text-decoration-thickness: 10%;
+  text-underline-offset: 8%;
+  text-underline-position: from-font;
+}
+
+.homepage-service-row {
+  column-gap: 3rem;
+  flex-wrap: nowrap;
+}
+
+.homepage-service-card {
+  padding: 0;
+  border: 0.2rem solid #0465E1;
+  border-radius: 1px;
+}
+
+.homepage-service-card a {
+  text-decoration: none;
+  color: white;
+}
+
+.homepage-service-card a:hover {
+  text-decoration: none;
+  color: rgb(240, 234, 234);
 }
 
 /*# sourceMappingURL=custom.css.map */
