--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -12,15 +12,12 @@ $font-family-base: "Raleway", serif;
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
+/* Nav Bar */
 .horizontal-bar {
     background-color: #7F9DC3;
     width: 30%;
     border-radius: 5px;
     height: 5px;
-}
-
-.fs-1-1 {
-    font-size: 1.1rem;
 }
 
 #navbarContent {
@@ -30,6 +27,8 @@ $font-family-base: "Raleway", serif;
     transform: translate(-50%, -50%);
     font-size: 1.1rem;
 }
+
+/* Footer */
 
 .cc-footer a{
     text-decoration: none;
@@ -43,12 +42,14 @@ $font-family-base: "Raleway", serif;
 
 .cc-footer h5 {
     color: $main-blue;
-    margin-top: 8rem;
+    margin-top: 4rem;
 }
 
 .cc-footer-copyright {
     border-top: 0.15rem solid $main-blue;
 }
+
+/* Home Page */
 
 .hero-banner {
     background-image: url(../images/hero-banner-lg.png);
@@ -71,16 +72,6 @@ $font-family-base: "Raleway", serif;
     font-weight: 800;
 }
 
-.underline {
-    text-decoration-line: underline;
-    text-decoration-style: solid;
-    text-decoration-skip-ink: auto;
-    text-decoration-color: $main-blue;
-    text-decoration-thickness: 10%;
-    text-underline-offset: 8%;
-    text-underline-position: from-font;
-}
-
 .homepage-service-row {
     column-gap: 3rem; 
     flex-wrap: nowrap;
@@ -101,4 +92,47 @@ $font-family-base: "Raleway", serif;
 .homepage-service-card a:hover {
     text-decoration: none;
     color: rgb(240, 234, 234);
+}
+
+/*Contact Page */
+.contact-banner-layout {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5rem;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.contact-banner {
+    background-image: url(../images/contact-page-banner.png);
+    background-position: center;
+    padding: 10rem 12rem 12rem 10rem;
+    z-index: -1;
+}
+
+.contact-blurb {
+    background-color: white;
+    text-align: center;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    max-width: 400px;
+    border-radius: 1px;
+}
+
+/* General */
+.underline {
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-decoration-skip-ink: auto;
+    text-decoration-color: $main-blue;
+    text-decoration-thickness: 10%;
+    text-underline-offset: 8%;
+    text-underline-position: from-font;
+}
+
+.fs-1-1 {
+    font-size: 1.1rem;
 }
