--- a/css/custom.css
+++ b/css/custom.css
@@ -11932,22 +11932,31 @@ textarea.form-control-lg {
   max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
+  min-height: 100px;
 }
 
 .contact-banner {
   background-image: url(../images/contact-page-banner.png);
   background-position: center;
   padding: 10rem 12rem 12rem 10rem;
-  z-index: -1;
+  position: relative;
 }
 
-.contact-blurb {
+.contact-blurb, .contact-confirmation {
   background-color: white;
   text-align: center;
   padding-top: 1rem;
   padding-bottom: 1rem;
   max-width: 400px;
   border-radius: 1px;
+}
+
+.contact-confirmation {
+  padding-top: 2rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /* General */
