Add about-us page

--- a/css/custom.css
+++ b/css/custom.css
@@ -11974,4 +11974,8 @@ textarea.form-control-lg {
   font-size: 1.1rem;
 }
 
+.mb-6 {
+  margin-bottom: 6rem;
+}
+
 /*# sourceMappingURL=custom.css.map */
