--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -132,6 +132,14 @@ $font-family-base: "Raleway", serif;
     transform: translate(-50%, -50%);
 }
 
+/* Portfolio */
+.portfolio-grid .col-12,
+.portfolio-grid .col-6{
+    padding: 9.5px 9.5px 9.5px 9.5px;
+    // padding-left: 9.5px;
+    // padding-right: 9.5px;
+}
+
 /* General */
 .underline {
     text-decoration-line: underline;
