--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -140,6 +140,11 @@ $font-family-base: "Raleway", serif;
     // padding-right: 9.5px;
 }
 
+/* Services */
+.service-img-layout .col-md-auto {
+    padding: 6px 6px 6px 6px;
+}
+
 /* General */
 .underline {
     text-decoration-line: underline;
