Fix issue where nav dropdown was behind image on contact page

--- a/css/custom.css
+++ b/css/custom.css
@@ -11858,6 +11858,7 @@ textarea.form-control-lg {
   top: 50%;
   transform: translate(-50%, -50%);
   font-size: 1.1rem;
+  z-index: 9999;
 }
 
 /* Footer */
